--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,294 @@
-.App {
-  text-align: center;
+@import url("~leaflet/dist/leaflet.css");
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Arial' , sans-serif;
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body,
+#root,
+.leaflet-container {
+  height: 100vh;
+  width: 100vw;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a{
+  color:black;
+}
+.container{
+  width:100%;
+  max-width: 1235px;
+  margin:0 auto;
+}
+.topHeader{
+  background-color: #006BBD;
+  color:white;
+  font-size:15px;
+  height: 35px;
+  font-weight: bold;
+}
+.topHeader .container a{
+  color:white;
+  position: relative;
+}
+.topHeader .container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 9px 25px;
+}
+.icon{
+  fill: #ffffff;
+  position: absolute;
+  left:-23px;
+  top:2px
+}
+.mainHeader{
+  width:100%;
+  height: 100px;
+  font-size: 20px;
+  box-shadow: 0 5px 10px lightgrey;
+}
+.mainHeader .container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  position:relative;
+}
+.logo{
+  width:90px;
+  margin-top:5px;
+}
+.navigation{
+  display: flex;
+  column-gap: 20px;
+}
+.mainPage{
+  min-height: 100%;
+}
+.blockTop{
+  height: 500px;
+  position: relative;
+  background: rgba(0,64,113,.55)!important;
+}
+.blockTopImage{
+  position: absolute;
+  z-index: -1;
+  width:100%;
+  height: 100%;
+  background-image: url("../public/images/background.jpeg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.blockTop .container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+.blockTop .container h2{
+  color:white;
+  font-size: 40px;
+  width:75%;
+}
+.secondBlock h2{
+  color:#7c7b81;
+  margin-top:45px;
+  font-size: 35px;
+}
+.secondBlock{
+  margin-bottom: 20px;
+}
+.secondBlock .container{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.secondBlockContainer{
+  margin-top:40px;
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  gap:20px;
+  width:100%;
+}
+.card{
+  text-align: center;
+}
+.card p{
+  font-size: 25px;
+  margin-top:10px;
+  color: #006BBD;
+}
+.card img{
+  width:400px;
+  height: 250px;
+  border-radius: 20px;
+}
+.blockMiddleImage{
+  position: absolute;
+  z-index: -1;
+  width:100%;
+  height: 100%;
+  background-image: url("../public/images/background.jpeg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.blockMiddle{
+  height: 350px;
+  position: relative;
+  background: rgba(0,64,113,.55)!important;
+}
+.cardLogo{
+  fill: #ffffff;
+}
+.middleBlockCard{
+  color:white;
+  font-size: 25px;
+  display: flex;
+  width:33%;
+  height: 100px;
+}
+.middleBlockContainerCard{
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 70px;
+  padding: 40px 0 40px 0;
+}
+
+.middleBlockCard p{
+  margin-left:10px;
+}
+.aboutMeContainer{
+  display: flex;
+  column-gap: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.about{
+  display: flex;
+  flex-direction: column;
+}
+.doctorImage{
+  width:450px;
+  height: 500px;
+  border-radius: 20px;
+}
+.aboutName{
+  font-size: 38px;
+  color: #006bbd;
+  margin-bottom: 30px;
+}
+.aboutLi{
+  font-size: 19px;
+  margin-bottom: 15px;
+}
+.footerInfo{
+  padding: 0 70px 0 35px;
+  border-right:1px solid #C2DFEA;
+
+
+}
+.footerInfo:last-child{
+  border:none;
+}
+footer .footerBott{
+  padding: 20px 0;
+  text-align: center;
+  background-color: #006BBD;
+  color:white;
+}
+.footerTop{
+
+}
+.footerInfoList{
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  gap: 7px;
+  font-size: 15px;
+}
+.footerTop .container{
+  display: flex;
+  justify-content: space-around;
+  padding: 90px 0;
+}
+.footerTop h2{
+  color:rgb(65,88,208);
+  margin-bottom: 20px;
+  font-size: 22px;
+}
+.leaflet-container {
+  height: 400px;
+  width: 50%;
+}
+.aboutMe{
+  display: flex;
+  position: relative;
+  background-color:rgb(86,193,255,0.15);
+}
+.science{
+  display: flex;
+  position: relative;
+}
+.patient{
+  display: flex;
+  position: relative;
+}
+.dropdownBlock{
+  display: flex;
+  flex-direction: column;
+  position:absolute;
+  left:-50%;
+  top:40px;
+  box-shadow: 0px 0px 15px 0 rgb(33 33 33 / 11%);
+  border-radius: 8px;
+  width: 255px;
+  background: white;
+  padding: 15px;
+  z-index: 5;
+  list-style: none;
+  row-gap: 10px;
+}
+.map{
+  width:100%;
+}
+.photoC{
+  width:100px;
+}
+.aboutPhotosSlider{
+  display: flex;
+  justify-content: space-between;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  z-index: 1000;
 }
 
-.App-link {
-  color: #61dafb;
+.fullPageImage {
+  max-width: 80%;
+  max-height: 80%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.certificateImages{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 30px;
+}
+.photoCeAboutMe{
+  width:400px;
 }
