--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 @import url("~leaflet/dist/leaflet.css");
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 *{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Arial' , sans-serif;
+  font-family: 'Rubik', sans-serif;
   text-decoration: none;
 }
-
 
 body,
 #root,
@@ -68,9 +68,7 @@ a{
   display: flex;
   column-gap: 20px;
 }
-.mainPage{
-  min-height: 100%;
-}
+
 .blockTop{
   height: 500px;
   position: relative;
@@ -174,10 +172,15 @@ a{
   display: flex;
   flex-direction: column;
 }
-.doctorImage{
+.doctorImageBlock{
   width:450px;
   height: 500px;
   border-radius: 20px;
+  overflow: hidden;
+}
+.doctorImage{
+  height: 100%;
+
 }
 .aboutName{
   font-size: 38px;
@@ -189,10 +192,21 @@ a{
   margin-bottom: 15px;
 }
 .footerInfo{
-  padding: 0 70px 0 35px;
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+
+}
+.footerInfo:nth-child(2){
   border-right:1px solid #C2DFEA;
-
-
+  border-left:1px solid #C2DFEA;
+  flex-basis: 40%;
+}
+.address{
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap:10px;
 }
 .footerInfo:last-child{
   border:none;
@@ -204,7 +218,7 @@ footer .footerBott{
   color:white;
 }
 .footerTop{
-
+  background:#EDFAFF;
 }
 .footerInfoList{
   display: flex;
@@ -230,7 +244,6 @@ footer .footerBott{
 .aboutMe{
   display: flex;
   position: relative;
-  background-color:rgb(86,193,255,0.15);
 }
 .science{
   display: flex;
@@ -257,6 +270,7 @@ footer .footerBott{
 }
 .map{
   width:100%;
+  flex-basis: 70%;
 }
 .photoC{
   width:100px;
@@ -291,4 +305,71 @@ footer .footerBott{
 }
 .photoCeAboutMe{
   width:400px;
+}
+.basicInf h1,.certificate h1,.diagnostics h1,.questions h1,.publications h1,.scienceExperience h1,.course h1{
+  margin-bottom: 35px;
+  font-size: 40px;
+}
+.basicInf h2,.certificate h2,.diagnostics h2,.questions h2,.publications h2,.scienceExperience h2,.course h2{
+  font-size: 30px;
+}
+.basicInf h1 ,.contacts h1, .contacts h2  ,.course h1, .course h2,.basicInf h1, .basicInf h2 , .certificate h1, .certificate h2 ,.diagnostics h1 , .diagnostics h2, .questions h1, .questions h2,.publications h1,.publications h2, .scienceExperience h2 , .scienceExperience h1 {
+  color: #006bbd;
+}
+.contacts .container ,.certificate .container , .diagnostics .container , .questions .container , .publications .container , .scienceExperience .container , .basicInf .container ,.course .container{
+  margin-top:35px;
+  margin-bottom: 35px;
+}
+.contactsInfo{
+  display: flex;
+  padding:15px 0 0 25px;
+}
+.contactsInfoText{
+  display: flex;
+  flex-direction: column;
+  gap:40px;
+  flex-basis: 30%;
+  font-size: 15.5px;
+}
+.contactsTelAndEmail , .contactsAddress {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  position: relative;
+}
+.iconGroup{
+  position: relative;
+}
+.iconGroup .icon{
+  fill:#006bbd!important;
+}
+.contactsMessengers .icon{
+  position: relative;
+  fill:#006bbd!important;
+}
+.contactsMessengers{
+  display: flex;
+  gap:20px;
+}
+.socialGroup{
+  display: flex;
+  gap:40px;
+}
+.basicInf p ,.basicInf li{
+  text-align: justify!important;
+  font-size: 19px;
+  line-height: 25px;
+}
+.basicInf h2{
+  margin-bottom: 20px;
+}
+.basicInf .container{
+  display: flex;
+  flex-direction: column;
+  gap:30px;
+}
+.experience ul,.practice ul{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
 }
