--- a/src/css/App.css
+++ b/src/css/App.css
@@ -61,7 +61,7 @@ a{
   position:relative;
 }
 .logo{
-  width:90px;
+  width:120px;
   margin-top:5px;
 }
 .navigation{
@@ -79,7 +79,7 @@ a{
   z-index: -1;
   width:100%;
   height: 100%;
-  background-image: url("../public/images/background.jpeg");
+  background-image: url("../../public/images/background.jpeg");
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -136,7 +136,7 @@ a{
   z-index: -1;
   width:100%;
   height: 100%;
-  background-image: url("../public/images/background.jpeg");
+  background-image: url("../../public/images/background.jpeg");
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -397,4 +397,12 @@ footer .footerBott{
 }
 .active{
   color:#56C1FF;
+}
+.local{
+  display: flex;
+  gap: 10px;
+}
+.Active{
+  font-weight: bold;
+  text-decoration: underline;
 }
